--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
     "flatpickr": "^4.6.13",
+    "typed.js": "^2.0.12",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
   },
